--- a/stakeholder/Condition1.html
+++ b/stakeholder/Condition1.html
@@ -1,10 +1,7 @@
-{{ block title }}Instructions (4 of 5){{ endblock }}
+{{ block title }}ESG Materiality Disclosures (1 of 2){{ endblock }}
 {{ block content }}
     <p>
-        As part of your risk assessment, you <b>review the following information</b> about the stakeholder engagement initiative.
-    </p>
-    <p>
-        The <b>internal and external stakeholders</b> that were consulted for the stakeholder engagement initiative possess the following relationship attributes to Acme:
+        The disclosures reveal that the internal and external stakeholders consulted for the ESG materiality assessment possess the following relationship attributes to Acme:
     </p>
     {% if condition == 'Low Stakeholder Relevance' %}
         <ul>
