--- a/stakeholder/Condition2.html
+++ b/stakeholder/Condition2.html
@@ -1,4 +1,4 @@
-{{ block title }}Instructions (5 of 5){{ endblock }}
+{{ block title }}ESG Materiality Disclosures (2 of 2){{ endblock }}
 {{ block content }}
     <p>
         In addition to the information about the engaged stakeholder's relevance, you noted <b> the following ESG theme prioritization chart</b>.
