--- a/stakeholder/Introduction.html
+++ b/stakeholder/Introduction.html
@@ -1,4 +1,4 @@
-{{ block title }}Instructions (1 of 5){{ endblock }}
+{{ block title }}Instructions (1 of 2){{ endblock }}
 {{ block content }}
 
 <div class="card mb-3">
@@ -13,26 +13,15 @@
 
         <div class="form-group mb-4">
             <p class="card-text">
-                The next screen contains information <b>about a hypothetical publicly traded company</b>, Acme LLC. 
-                As an investment analyst, you will be asked to <b>set a target price</b> for Acme's stock after reviewing their newest disclosures on their environmental, social, and governance (ESG) materiality analysis.
+                The next screen contains information about a hypothetical publicly traded company, Acme LLC. 
+                As an investment analyst, you will be asked to set a target price for Acme's stock after reviewing their newest environmental, social, and governance (ESG) materiality disclosures.
             </p>
         </div>
 
         <div class="form-group mb-4">
-            <b>The study will proceed as follows:</b>
-            <ol>
-                <li class="mb-2">You see a fellow analyst's assessment from one day prior .</li>
-                <li class="mb-2">You review the firm's disclosure on their ESG materiality assessment.</li>
-                <li>You set your target price for the stock.</li>
-            </ol>
-        </div>
-
-        <div class="form-group">
-            <b>Important Note:</b>
-            <ul class="list-unstyled">
-                <li class="mb-2">• There are no right or wrong answers.</li>
-                <li>• As the task requires a high level of concentration, it is important that you <b>complete it without interruption</b>.</li>
-            </ul>
+            <p class="card-text">
+                There are no right or wrong answers. As the task requires a high level of concentration, it is important that you complete it without interruption.
+            </p>
         </div>
     </div>
 </div>
