--- a/spec_design/Checks.html
+++ b/spec_design/Checks.html
@@ -82,12 +82,12 @@
         </p>
         <div class="radio-group">
             <label class="radio-option">
-                <input type="radio" name="time_horizon" value="Short-term risks" required>
-                The risks focused on <b>&nbsp;short-term challenges&nbsp;</b> (1–2 years) ⏱️
+                <input type="radio" name="time_horizon" value="Near future risks" required>
+                The risks focused on <b>&nbsp;near future (first few days after product launch)&nbsp;</b> ⏱️
             </label>
             <label class="radio-option">
-                <input type="radio" name="time_horizon" value="Long-term risks">
-                The risks focused on <b>&nbsp;long-term challenges&nbsp;</b> (10–15 years) 🔭
+                <input type="radio" name="time_horizon" value="Distant future risks">
+                The risks focused on <b>&nbsp;distant future (sometime in the distant future)&nbsp;</b> 🔭
             </label>
         </div>
         {{ formfield_errors 'time_horizon' }}
