--- a/stakeholder/Assessment.html
+++ b/stakeholder/Assessment.html
@@ -4,7 +4,7 @@
 <!-- <h5>Set Your Target Price</h5> -->
 
 <p>
-    As a financial analyst, you are asked to provide your target price assessment for Acme, following their latest ESG materiality disclosures.
+    As a financial analyst, you are asked to provide your target price assessment for Acme, following their latest ESG materiality assessment.
 </p>
 
 <div class="card">
