--- a/stakeholder/Background.html
+++ b/stakeholder/Background.html
@@ -6,7 +6,7 @@
         
         <div class="card-text mb-4">
             <p class="mb-3">
-                Below is Acme's stock performance data prior to the ESG materiality disclosure. 
+                Below is Acme's stock performance data prior to the ESG materiality assessment. 
             </p>
         </div>        <div class="card bg-light mb-4">
             <div class="card-body">
