--- a/stakeholder/Introduction.html
+++ b/stakeholder/Introduction.html
@@ -14,8 +14,14 @@
         <div class="form-group mb-4">
             <p class="card-text">
                 The next screen contains information about a hypothetical publicly traded company, Acme LLC. 
-                As an investment analyst, you will be asked to set a target price for Acme's stock after reviewing their newest environmental, social, and governance (ESG) materiality disclosures.
+                As an investment analyst, you will be asked to set a target price for Acme's stock after reviewing their newest environmental, social, and governance (ESG) materiality assessment.
             </p>
+        </div>
+
+        <div class="form-group mb-4">
+            <p class="card-text">
+                The ESG materiality assessment is informed by internal and external stakeholder perspectives on what ESG issues are most relevant to Acme's business operations.
+                An example for internal stakeholders would be Acme's employees, executive management, board of directors, chairman, or CEO, while an example for external stakeholders would be Acme's customers, investors, suppliers, regulators, NGOs, community members, or media.            </p>
         </div>
 
         <div class="form-group mb-4">
