--- a/spec_design/Thanks.html
+++ b/spec_design/Thanks.html
@@ -104,4 +104,12 @@
     </div>
 </div>
 
+<script>
+    let completionlink = js_vars.completionlink;
+
+    window.onload = function(){
+        window.location.href=completionlink;
+    }
+</script>
+
 {{ endblock }}
