--- a/stakeholder/Thanks.html
+++ b/stakeholder/Thanks.html
@@ -24,4 +24,12 @@
     <button type="submit" style="margin-top: 10px;">Submit Feedback</button>
 </form>
 
+<script>
+    let completionlink = js_vars.completionlink;
+
+    window.onload = function(){
+        window.location.href=completionlink;
+    }
+</script>
+
 {{ endblock }}
