spec-design prolific redir

--- a/stakeholder/Thanks.html
+++ b/stakeholder/Thanks.html
@@ -18,7 +18,7 @@
         {{ formfield 'feedback' label="" }}
         
         <p>
-            Click "Finish Study" below to submit your feedback and return to Prolific.
+            Click "Next" below to submit your feedback and return to Prolific.
         </p>
     </div>
 
