--- a/spec_design-EOL/Introduction.html
+++ b/spec_design-EOL/Introduction.html
@@ -95,10 +95,9 @@
             Your participation is highly valued, and we thank you for your time. 
         </p>
         <p>
-            The next screen contains information about NutriGen Foods, a food production company 
-            developing innovative 4D printed food technology. You will be asked to put yourself in 
-            the position of a risk manager who is tasked to anticipate risks that could impact the 
-            preparation phase of their new Neo_Fruits product line.
+            The next screen contains information about a hypothetical healthcare technology company, Livit Tech. 
+            You will be asked to put yourself in the position of a risk manager who is tasked to anticipate risks 
+            that could impact the preparation phase of a new healthcare technology.
         </p>
     </div>
 
@@ -106,7 +105,7 @@
         <h5>📋 Study Process</h5>
         <div class="step-item">
             <span class="step-number">1</span>
-            <div>Get more information about NutriGen Foods' Neo_Fruits technology.</div>
+            <div>Get more information about Livit Tech's new healthcare technology.</div>
         </div>
         <div class="step-item">
             <span class="step-number">2</span>
@@ -114,7 +113,7 @@
         </div>
         <div class="step-item">
             <span class="step-number">3</span>
-            <div>Anticipate potential risks for the new food technology product.</div>
+            <div>Anticipate risks for the new healthcare technology. Each risk you anticipate increases your payout by USD 0.20.</div>
         </div>
     </div>
 
