--- a/spec_design-EOL/Controls.html
+++ b/spec_design-EOL/Controls.html
@@ -84,7 +84,7 @@
 
 <div class="controls-container">    <div class="mb-4">
         <h4>📋 Information Feedback</h4>
-        <p class="text-muted">Please indicate your level of agreement with the following statements. The statements refer to the information provided about the new food technology.</p>
+        <p class="text-muted">Please indicate your level of agreement with the following statements. The statements refer to the information provided about the new healthcare technology.</p>
     </div>
 
     <div class="question-box">
@@ -114,7 +114,7 @@
     <div class="question-box">
         <p class="mb-3">
             <span class="question-number">2</span>
-            The narrative structure of the information made the risks of the new food technology more accessible.
+            The narrative structure of the information made the risks of the new healthcare technology more accessible.
         </p>
         <div class="likert-scale">
             {% for i in range(1, 8) %}
@@ -138,7 +138,7 @@
     <div class="question-box">
         <p class="mb-3">
             <span class="question-number">3</span>
-            The information made the risks of the new food technology more concrete and tangible.
+            The information made the risks of the new healthcare technology more concrete and tangible.
         </p>
         <div class="likert-scale">
             {% for i in range(1, 8) %}
