--- a/spec_design/Spec_Condition.html
+++ b/spec_design/Spec_Condition.html
@@ -140,11 +140,11 @@
     {% elif speculative_design == 'Speculative Design Present' %}
         <div class="header-section">
             <div class="video-icon">🎥</div>
-            <h4>Neo_Fruits: 4D Printed Food Technology</h4>
+            <h4>Neo Fruits Commercial Video</h4>
         </div>
           <div class="notice-box">
-            <p><b>Please watch the video carefully</b> as it contains important information about 
-            the Neo_Fruits technology. You will be asked questions about it later.</p>
+            <p>Please watch the video carefully as it provides an example of <b>how the team envisions consumers to interact with 
+            Neo Fruits</b>. You will be asked questions about it later.</p>
         </div>        <div class="video-container">
             <iframe src="https://www.youtube.com/embed/NeydwfUmyoY?autoplay=1&mute=0&cc_load_policy=1&cc_lang_pref=en" 
                     title="YouTube video player" 
