--- a/spec_design/Controls.html
+++ b/spec_design/Controls.html
@@ -84,7 +84,7 @@
 
 <div class="controls-container">    <div class="mb-4">
         <h4>📋 Information Feedback</h4>
-        <p class="text-muted">Please indicate your level of agreement with the following statements. The statements refer to the information provided about the new food technology.</p>
+        <p class="text-muted">Please indicate your level of agreement with the following statements.</p>
     </div>
 
     <div class="question-box">
@@ -168,13 +168,13 @@
                 <div class="scale-option">
                     <input type="radio" name="manipulation_effort" value="{{ i }}" id="q4_{{ i }}" required>
                     <label class="radio-label" for="q4_{{ i }}">
-                        {% if i == 1 %}Extremely<br>effortless{% endif %}
-                        {% if i == 2 %}Much less<br>effort{% endif %}
-                        {% if i == 3 %}Less<br>effort{% endif %}
-                        {% if i == 4 %}About the<br>same{% endif %}
-                        {% if i == 5 %}More<br>effort{% endif %}
-                        {% if i == 6 %}Much more<br>effort{% endif %}
-                        {% if i == 7 %}Extremely<br>effortful{% endif %}
+                        {% if i == 1 %}Extremely<br>low effort{% endif %}
+                        {% if i == 2 %}Low<br>effort{% endif %}
+                        {% if i == 3 %}Rather low<br>effort{% endif %}
+                        {% if i == 4 %}Neutral<br>effort{% endif %}
+                        {% if i == 5 %}Rather high<br>effort{% endif %}
+                        {% if i == 6 %}High<br>effort{% endif %}
+                        {% if i == 7 %}Extremely<br>high effort{% endif %}
                     </label>
                 </div>
             {% endfor %}
@@ -193,11 +193,11 @@
                     <input type="radio" name="manipulation_difficulty" value="{{ i }}" id="q5_{{ i }}" required>
                     <label class="radio-label" for="q5_{{ i }}">
                         {% if i == 1 %}Extremely<br>easy{% endif %}
-                        {% if i == 2 %}Much<br>easier{% endif %}
-                        {% if i == 3 %}Somewhat<br>easier{% endif %}
-                        {% if i == 4 %}About the<br>same{% endif %}
-                        {% if i == 5 %}Somewhat<br>harder{% endif %}
-                        {% if i == 6 %}Much<br>harder{% endif %}
+                        {% if i == 2 %}Easy<br>{% endif %}
+                        {% if i == 3 %}Rather<br>easy{% endif %}
+                        {% if i == 4 %}Neutral<br>{% endif %}
+                        {% if i == 5 %}Rather<br>difficult{% endif %}
+                        {% if i == 6 %}Difficult<br>{% endif %}
                         {% if i == 7 %}Extremely<br>difficult{% endif %}
                     </label>
                 </div>
