--- a/spec_design/Introduction.html
+++ b/spec_design/Introduction.html
@@ -98,7 +98,7 @@
             The next screen contains information about NutriGen Foods, a food production company 
             developing innovative 4D printed food technology. You will be asked to put yourself in 
             the position of a risk manager who is tasked to anticipate risks that could impact the 
-            preparation phase of their new Neo_Fruits product line.
+            preparation phase of their new Neo Fruits product line.
         </p>
     </div>
 
@@ -106,11 +106,11 @@
         <h5>📋 Study Process</h5>
         <div class="step-item">
             <span class="step-number">1</span>
-            <div>Get more information about NutriGen Foods' Neo_Fruits technology.</div>
+            <div>Get more information about NutriGen Foods' Neo Fruits technology.</div>
         </div>
         <div class="step-item">
             <span class="step-number">2</span>
-            <div>Receive additional instructions that are relevant for your risk anticipation.</div>
+            <div>Receive additional instructions that are relevant for your task.</div>
         </div>
         <div class="step-item">
             <span class="step-number">3</span>
