--- a/spec_design/Spec_Condition.html
+++ b/spec_design/Spec_Condition.html
@@ -89,7 +89,7 @@
         </div>
         <div class="notice-box">
             <p><b>Please take a moment to reflect</b> on the information you have reviewed so far 
-            before proceeding with the risk anticipation task.</p>
+            before proceeding with this study.</p>
         </div>
         
         <div class="content-box">
@@ -97,7 +97,7 @@
                 <b>You may use this time to consider:</b>
             </p>
             <ul style="line-height: 2em;">
-                <li>The context of NutriGen Foods' Neo_Fruits technology</li>
+                <li>The context of NutriGen Foods' Neo Fruits technology</li>
                 <li>Potential risks that may arise during product development</li>
                 <li>How you will approach the upcoming risk anticipation task</li>
             </ul>
