--- a/spec_design/Assessment.html
+++ b/spec_design/Assessment.html
@@ -73,8 +73,8 @@
     }
     
     .risk-counter {
-        background-color: #007bff;
-        color: white;
+        background-color: #00ff559f;
+        color: rgb(0, 0, 0);
         padding: 10px 15px;
         border-radius: 5px;
         margin: 15px 0;
