--- a/spec_design/BIF.html
+++ b/spec_design/BIF.html
@@ -1,4 +1,4 @@
-{{ block title }}<span style="display: none;">Personal Behavior</span>{{ endblock }}
+{{ block title }}<span style="display: none;">About Your Behavior</span>{{ endblock }}
 {{ block content }}
 
 <style>
@@ -38,6 +38,7 @@
 
     .form-check {
         padding: 10px 0;
+        margin-left: 40px;
     }
 
     .form-check-input {
