--- a/spec_design/PANAS.html
+++ b/spec_design/PANAS.html
@@ -1,4 +1,4 @@
-{{ block title }}<span style="display: none;">Your Current State</span>{{ endblock }}
+{{ block title }}<span style="display: none;">How do you feel?</span>{{ endblock }}
 {{ block content }}
 
 <style>
@@ -78,7 +78,7 @@
 
 <div class="panas-container">
     <div class="mb-4">
-        <h4>📋 Your Current State</h4>
+        <h4>📋 How do you feel?</h4>
         <p class="text-muted">This scale consists of a number of words that describe different feelings and emotions.</p>
         <p class="text-muted"><strong>Please read each item and then mark the appropriate answer. Indicate to what extent you feel this way right now, that is, at the present moment.</strong></p>
     </div>
