stakeholder add-on

--- a/stakeholder/Condition2.html
+++ b/stakeholder/Condition2.html
@@ -21,6 +21,8 @@
         <p>
             On the horizontal (x-axis) of the chart, you see how internal stakeholders prioritized the different ESG themes. 
             On the vertical (y-axis) of the chart, you see how external stakeholders prioritized the different ESG themes.
+            An <b>example for internal stakeholders</b> would be Acme's employees, executive management, board of directors, chairman, or CEO, while an <b>example for external stakeholders</b> would be Acme's customers, investors, suppliers, regulators, NGOs, community members, or media.
+
         </p>
 
     {% elif stakeholder_consensus == 'High Stakeholder Consensus' %}
@@ -33,6 +35,7 @@
         <p>
             On the horizontal (x-axis) of the chart, you see how internal stakeholders prioritized the different ESG themes. 
             On the vertical (y-axis) of the chart, you see how external stakeholders prioritized the different ESG themes.
+            An <b>example for internal stakeholders</b> would be Acme's employees, executive management, board of directors, chairman, or CEO, while an <b>example for external stakeholders</b> would be Acme's customers, investors, suppliers, regulators, NGOs, community members, or media.
         </p>
     {% endif %}
 
