spec-design updates

--- a/spec_design/Assessment.html
+++ b/spec_design/Assessment.html
@@ -110,6 +110,13 @@
         </ul>
     </div>
     
+    <div style="background-color: #fff3cd; border-left: 4px solid #ffc107; padding: 15px; border-radius: 0 8px 8px 0; margin: 20px 0;">
+        <p style="margin: 0; color: #856404;">
+            <b>💰 Performance-Based Compensation:</b> Extra compensation is possible depending on your risk identification task performance, 
+            which will be determined based on the <b>quantity and relevance</b> of the risks you identify.
+        </p>
+    </div>
+    
     <div class="risk-counter">
         Risks identified: <span id="risk-count-display">0</span>
     </div>
