--- a/spec_design/Background.html
+++ b/spec_design/Background.html
@@ -94,7 +94,7 @@
         </p>
         <p>
             To address this challenge, NutriGen Foods recently initiated a groundbreaking project called 
-            Neo Fruits and you have been assigned to anticipate potential risks during the 
+            Neo Fruits and you have been assigned to identify potential risks during the 
             preparation phase of this new product line.
         </p>
     </div>
