--- a/spec_design/Consent.html
+++ b/spec_design/Consent.html
@@ -95,6 +95,8 @@
         <li>Your anonymized data will be used for academic purposes and may be shared with other academics for research purposes.</li>
         <li>Participation is completely voluntary, and you can quit at any time.</li>
         <li>Please note that you cannot go back to a previous screen.</li>
+        <li>In case of questions, concerns, or feedback please reach out to ccma@unisg.ch.</li>
+
     </ul>
 
     <div class="checkbox-container">
