--- a/spec_design/CLT_Condition.html
+++ b/spec_design/CLT_Condition.html
@@ -65,11 +65,11 @@
 
     <div class="instruction-box">
         <h4 class="mb-3">Reflection Task</h4>
-        <p class="lead">Before you begin the risk assessment, please take a moment to reflect on the Neo Fruit project.</p>
+        <p class="lead">Before you begin the risk identification task, please take a moment to reflect on the Neo Fruit project.</p>
         
         {% if construal_level == 'Concrete Construal' %}
             <div class="question-prompt">
-                Please think of and describe <b>how</b> the project team is developing the new food technology 🔧
+                Please think of and describe <b><u>how</u></b> the project team is developing the new food technology 🔧
             </div>
             <p class="mt-3">
                 <em>Consider the specific steps, processes, and methods involved in bringing this technology to life.</em>
@@ -77,7 +77,7 @@
 
         {% elif construal_level == 'Abstract Construal' %}
             <div class="question-prompt">
-                Please think of and describe <b>why</b> the project team is developing the new food technology 💡
+                Please think of and describe <b><u>why</u></b> the project team is developing the new food technology 💡
             </div>
             <p class="mt-3">
                 <em>Consider the broader goals, purposes, and motivations behind this technological development.</em>
