--- a/spec_design/Demographics.html
+++ b/spec_design/Demographics.html
@@ -202,6 +202,18 @@
     <div class="question-box">
         <p class="mb-3">
             <span class="question-number">6</span>
+            How many years of full-time work experience in food innovation, food science, or biotechnology do you have?
+        </p>
+        <div class="number-input">
+            <input type="number" id="industry_experience" name="industry_experience" min="0" step="1" required>
+            <label for="industry_experience">years</label>
+        </div>
+        {{ formfield_errors 'industry_experience' }}
+    </div>
+
+    <div class="question-box">
+        <p class="mb-3">
+            <span class="question-number">7</span>
             Is English your native language (mother tongue)?
         </p>
         <div class="radio-group">
