--- a/stakeholder/Welcome.html
+++ b/stakeholder/Welcome.html
@@ -13,6 +13,8 @@
                 <li class="mb-2">• Your anonymized data will be used for academic purposes and may be shared with other academics for research purposes.</li>
                 <li class="mb-2">• Participation is completely voluntary, and you can quit at any time.</li>
                 <li class="mb-2">• Please note that you cannot go back to a previous screen.</li>
+                <li class="mb-2">• In case of questions, concerns, or feedback please reach out to ccma@unisg.ch.</li>
+
             </ul>
         </div>
 
